--- a/frontend/web/src/styles/sass/features/booking-engine/listingDetails.scss
+++ b/frontend/web/src/styles/sass/features/booking-engine/listingDetails.scss
@@ -761,7 +761,6 @@
 
     @media (max-width: 768px) {
         align-items: flex-end;
-        padding-top: 0;
         padding: 12px;
     }
 }
