--- a/frontend/web/src/styles/sass/pages/careers/jobDetails.scss
+++ b/frontend/web/src/styles/sass/pages/careers/jobDetails.scss
@@ -177,8 +177,10 @@ $secondary-color: var(--secondary-color);
     }
 
     .exp-container-bottom {
+        margin-top: 0;
+        margin-right: auto;
         margin-bottom: 45px;
-        margin: auto;
+        margin-left: auto;
 
 
         ul.job-detail-list {
